# cargo-fetch-source

./: .gitignore  .release-please-manifest.json  Cargo.toml  README.md  RELEASE-TASKS.md  package-lock.json  package.json  release-please-config.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codecov.yml  lint-and-check.yml  release-please.yml  test-and-docs.yml
cargo-fetch-source/: CHANGELOG.md  Cargo.toml  README.md
cargo-fetch-source-lib/: Cargo.toml  build.rs
cargo-fetch-source-lib/src/: artefact.rs  error.rs  git.rs  lib.rs  process.rs  source.rs  tar.rs
cargo-fetch-source/examples/: basic-sources.toml  many-sources.toml
cargo-fetch-source/src/: args.rs  error.rs  fetch.rs  main.rs  progress.rs
cargo-fetch-source/tests/: cli_tests.rs
fetch-source/: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  build.rs
fetch-source/src/: cache.rs  error.rs  git.rs  helper.rs  lib.rs  process.rs  source.rs  tar.rs
fetch-source/tests/: integration_tests.rs
scripts/: 00-clippy-check.sh  01-fmt-files-in-commit.sh  02-list-non-conventional-commit.sh
src/lib/: artefact.rs  git.rs  git2_ext.rs  lib.rs  source.rs  tar.rs
