[package]
name = "cargo-fetch-source"
version = "0.1.0"
edition = "2024"

[lib]
name = "fetch_source"
path = "src/lib/lib.rs"

[[bin]]
name = "cargo-fetch-source"
path = "src/bin/cargo-fetch-source.rs"

[dependencies]
cargo_metadata = "0.20.0"
futures = { version = "0.3.31", features = ["futures-executor"] }
reqwest = "0.12.22"
serde = "1.0.219"
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["rt-multi-thread"] }

[package.metadata.fetch-source]
otf2 = { tar = "https://zenodo.org/records/4682684/files/otf2-2.3.tar.gz" }
otf2_git = { git = "https://github.com/your/repo.git", branch = "main" }
otf2_git_rev = { git = "https://github.com/your/repo.git", rev = "abcdef1234567890" }
foo = { tar = "https://example.com/foo-1.0.tar.gz" }
