[package]
name = "cargo-fetch-source"
version = "0.1.0"
edition = "2024"
authors = ["Adam Tuft"]
license = "MIT OR Apache-2.0"

[dependencies]
anstyle = "1.0.11"
anyhow = "1.0.98"
clap = { version = "4.5.41", features = ["derive"] }
console = "0.16.0"
dircpy = "0.3.19"
directories = "6.0.0"
fetch-source = { path = "../fetch-source", features = ["tar", "rayon"] }
indicatif = "0.18.0"
rayon = "1.10.0"
serde = "1.0.219"
serde_json = "1.0.141"
thiserror = "2.0.12"
toml = "0.9.2"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.0"
