[package]
name = "fetch-source"
version = "0.1.0"
edition = "2024"

[lib]
name = "fetch_source"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.98"
flate2 = "1.1.2"
rayon = { version = "1.10.0", optional = true }
reqwest = { version = "0.12.22", features = ["blocking"], optional = true }
serde = { version = "1.0.219", features = ["derive"] }
tar = { version = "0.4.44", optional = true }
thiserror = "2.0.12"
toml = "0.9.1"

[features]
tar = ["dep:tar", "reqwest"]
reqwest = ["dep:reqwest"]
# The async feature doesn't enable anything, as it only has an effect if 'dep:reqwest' is enabled
# when it provides the option to fetch tar sources asynchronously
async = []
rayon = ["dep:rayon"]

[package.metadata.fetch-source]
otf2 = { tar = "https://zenodo.org/records/4682684/files/otf2-2.3.tar.gz" }
dotfiles = { git = "git@github.com:adamtuft/dotfiles.git" }
dotfiles-cosma = { git = "git@github.com:adamtuft/dotfiles.git", branch = "cosma" }
dotfiles-commit-long = { git = "git@github.com:adamtuft/dotfiles.git", rev = "82fbfb0fe2b037676610710069325f703613935f" }
dotfiles-no-branch = { git = "git@github.com:adamtuft/dotfiles.git", branch = "not-a-branch" }
# dotfiles-commit-short = { git = "git@github.com:adamtuft/dotfiles.git", rev = "fafd64a", recursive = false }
# dotfiles-hp = { git = "git@github.com:adamtuft/dotfiles.git", branch = "hp-probook-atuft" }
# dotfiles-hamilton = { git = "git@github.com:adamtuft/dotfiles.git", branch = "hamilton", recursive = false }
