[package]
name = "fetch-source"
version = "0.1.0"
edition = "2024"

[lib]
name = "fetch_source"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.98"
flate2 = "1.1.2"
rayon = { version = "1.10.0", optional = true }
reqwest = { version = "0.12.22", features = ["blocking"], optional = true }
bytes = { version = "1.10.1", optional = true }
serde = { version = "1.0.219", features = ["derive"] }
tar = { version = "0.4.44", optional = true }
thiserror = "2.0.12"
toml = "0.9.1"
sha256 = "1.6.0"
directories = "6.0.0"
serde_json = "1.0.141"

[features]
tar = ["dep:tar", "reqwest"]
reqwest = ["dep:reqwest", "dep:bytes"]
# The async feature doesn't enable anything, as it only has an effect if 'dep:reqwest' is enabled
# when it provides the option to fetch tar sources asynchronously
async = []
rayon = ["dep:rayon"]
