[package]
name = "fetch-source"
version = "0.1.1"
edition = "2024"
authors = ["Adam Tuft"]
license = "MIT OR Apache-2.0"

[lib]
name = "fetch_source"
path = "src/lib.rs"

[dependencies]
flate2 = "1.1.2"
rayon = { version = "1.10.0", optional = true }
reqwest = { version = "0.12.22", features = ["blocking"], optional = true }
serde = { version = "1.0.219", features = ["derive"] }
tar = { version = "0.4.44", optional = true }
thiserror = "2.0.12"
toml = "0.9.1"
sha256 = "1.6.0"
directories = "6.0.0"
serde_json = "1.0.141"
derive_more = { version = "2.0.1", features = ["deref"] }

[dev-dependencies]
tempfile = "3.0"

[features]
tar = ["dep:tar", "reqwest"]
reqwest = ["dep:reqwest"]
rayon = ["dep:rayon"]
